--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,24 @@
 {
+	"name" : "hoffmann-oss/arrays",
+	"description" : "PHP 7 array functions",
+	"version" : "1.0.0-beta1",
+	"keywords" : [
+		"arrays",
+		"utility"
+	],
+	"homepage" : "https://github.com/hoffmann-oss/arrays-php",
+	"license" : "MIT",
+	"require" : {
+		"php" : ">=7.0.0"
+	},
 	"autoload" : {
 		"psr-4" : {
-			"Lib16\\Arrays\\" : "src"
+			"HoffmannOSS\\Arrays\\" : "src/"
 		}
 	},
-	"name" : "lib16/arrays",
-	"require" : {
-		"php" : ">=7.0"
+	"autoload-dev" : {
+		"psr-4" : {
+			"HoffmannOSS\\Arrays\\Tests\\" : "tests/"
+		}
 	}
 }
